--- a/style.css
+++ b/style.css
@@ -1,54 +1,108 @@
+* {
+    font-family: Candara;
+    padding: 0;
+    margin: 0;
+    border: 0;
+}
+
 body {
-  background-color: #01DF3A;
+    background-color: #01DF3A;
 }
 
-
-h1, h2 {
-  font-family: Candara;
-  text-align: center;
-  background-color: #088A85;
+header {
+    background: #088A85;
+    margin: 10px;
 }
 
-p {
-  font-family: Candara;
-  font-size: 25px;
-  text-align: center;
+.navi {
+    text-align: center;
+}
+
+a {
+    color: #6707a7;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+a:hover {
+    color: #fccffc;
+}
+
+.head-pag nav ul li {
+    background: #088A85;
+    list-style: none;
+    font-size: 40px;
+    padding: 10px 30px;
+    display: inline-block;
+    margin-bottom: 20px;
+}
+
+.head-pag h1, .head-pag h2{
+    background: #088A85;
+    padding: 1%;
+    line-height: 10px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.head-pag h1 {
+    font-weight: bold;
+    text-align: center;
+    font-size: 60px;
+    line-height: 60px;
+}
+
+.how-to p {
+    display: block;
+    font-size: 25px;
+    padding: 7px;
+    margin: 0 50px;
+}
+
+.how-to h3 {
+    font-size: 50px;
+    padding: 5px;
+    text-align: center;
+    margin: 20px 0;
+    color: #0b213b;
+}
+
+#addbutton {
+    border-radius: 150px;
+    width: 370px;
+    font-size: 35px;
+    padding: 25px;
+    margin: 29px 480px;
+    text-align: center;
+}
+
+.app-tipia {
+    display: block;
+    margin: 10px 480px;
+}
+
+input[type="checkbox"]{
+    width: 40px;
+    height: 40px;
+    padding: 5px 0 5px 5px;
+    margin: 5px 0 5px 5px;
+    display: inline-block;
 }
 
 input[type="text"] {
-    font-family: Candara;
-    font-size: 25px;
+    width: 250px;
+    font-size: 23px;
+    padding: 5px;
+    margin: 7px;
     border-radius: 5px;
-    margin: 3px;
-    background: #fff;
-    border: 4px solid #gcc;
-    max-width: 100%;
-    outline: none;
-    padding: 7px 8px;
-    display:block;
-    margin-left: auto;
-    margin-right: auto;
+    display: inline-block;
 }
 
-input[type="checkbox"] {
-    font-size: px;
-    display:block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 40px;
-    height: 40px;
-}
-
-input[type="button"] {
+input[type="button"]{
     font-size: 25px;
-    border-radius: 10px;
-    background: #fff;
-    border: 4px solid #gcc;
-    max-width: 100%;
-    outline: none;
-    padding: 1px 9px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    padding: 2px 10px;
+    display: inline-block;
+    border-radius: 50px;
 }
+
 
