--- a/style.css
+++ b/style.css
@@ -6,12 +6,13 @@
 }
 
 body {
-    background-color: #01DF3A;
+    background-color: #fcff7c;
 }
 
 header {
     background: #088A85;
-    margin: 10px;
+    margin: 0 4px;
+    border-radius: 17px;
 }
 
 .navi {
@@ -19,22 +20,22 @@ header {
 }
 
 a {
-    color: #6707a7;
+    color: #fcff7c;
     text-decoration: none;
     font-weight: bold;
 }
 
 a:hover {
-    color: #fccffc;
+    color: #88bdff;
 }
 
 .head-pag nav ul li {
     background: #088A85;
     list-style: none;
-    font-size: 40px;
-    padding: 10px 30px;
+    font-size: 30px;
+    padding: 0 4%;
     display: inline-block;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .head-pag h1, .head-pag h2{
@@ -42,14 +43,43 @@ a:hover {
     padding: 1%;
     line-height: 10px;
     margin: 0 auto;
-    text-align: center;
+    text-align: left;
 }
 
-.head-pag h1 {
+.head-pag a h1 {
     font-weight: bold;
-    text-align: center;
-    font-size: 60px;
+    text-align: left;
+    font-size: 50px;
     line-height: 60px;
+    padding: 1% 3%;
+    color: #0b213b;
+}
+
+#tipia-note {
+    margin: 50px 0 480px 0;
+}
+
+#tipia-note h3 {
+    font-size: 50px;
+    padding: 5px;
+    text-align: center;
+    margin: 20px 0;
+    color: #0b213b;
+}
+#tipia-note p {
+    display: block;
+    font-size: 25px;
+    padding: 7px;
+    margin: 0 50px;
+}
+
+#prince-section {
+    background: #7eb8ff;
+    padding: 50px 0 280px 0;
+}
+
+#prince-section div h3 {
+    padding: 1%;
 }
 
 .how-to p {
@@ -63,7 +93,6 @@ a:hover {
     font-size: 50px;
     padding: 5px;
     text-align: center;
-    margin: 20px 0;
     color: #0b213b;
 }
 
@@ -76,24 +105,35 @@ a:hover {
     text-align: center;
 }
 
+#addbutton:hover {
+    color: #133864;
+    width: 370px;
+    font-size: 35px;
+    padding: 20px;
+    margin: 29px 480px;
+    text-align: center;
+    background: #48596d;
+    border: 2px solid #777579;
+}
+
 .app-tipia {
-    display: block;
-    margin: 10px 480px;
+    display: inline-block;
+    margin: 0 120px;
 }
 
 input[type="checkbox"]{
     width: 40px;
     height: 40px;
     padding: 5px 0 5px 5px;
-    margin: 5px 0 5px 5px;
+    margin: 5px 5px 5px 5px;
     display: inline-block;
 }
 
 input[type="text"] {
-    width: 250px;
-    font-size: 23px;
+    width: 1000px;
+    font-size: 50px;
     padding: 5px;
-    margin: 7px;
+    margin: 20px auto;
     border-radius: 5px;
     display: inline-block;
 }
@@ -101,8 +141,68 @@ input[type="text"] {
 input[type="button"]{
     font-size: 25px;
     padding: 2px 10px;
+    margin: 5px 5px 5px 5px;
     display: inline-block;
     border-radius: 50px;
 }
 
+#about {
+    
+    padding: 50px 0 280px 0;
+}
 
+#about h3 {
+    font-size: 50px;
+    padding: 5px;
+    text-align: center;
+    margin: 20px 0;
+    color: #0b213b;
+}
+
+#about p {
+    display: block;
+    font-size: 25px;
+    padding: 7px;
+    margin: 0 50px;
+}
+
+#contact {
+    background: #7eb8ff;
+    padding: 50px 0 280px 0;
+}
+
+#contact h3{
+    font-size: 50px;
+    padding: 5px;
+    text-align: center;
+    margin: 20px 0;
+    color: #0b213b;
+}
+
+#contact p {
+    display: block;
+    font-size: 25px;
+    padding: 7px;
+    margin: 0 50px;
+}
+
+#princ-footer {
+    background: #036b51
+}
+
+#princ-footer ul li {
+    list-style: none;
+    font-size: 30px;
+    padding: 0 4%;
+    display: inline-block;
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
+
+#princ-footer ul li a{
+    color: #0b213b;
+}
+
+#princ-footer ul {
+    text-align: center;
+}
