--- a/style.css
+++ b/style.css
@@ -1,242 +1,159 @@
 * {
-    font-family: sans-serif;
-    padding: 0;
     margin: 0;
-    border: 0;
+    padding: 0;
+    letter-spacing: 0;
+    font-family: sans-serif;
 }
 
 body {
-    background-color: #fcff7c;
+    background: #ffffff;
+    padding-top: 60px; 
 }
 
-header {
-    background: #088A85;
-    margin: 0 4px;
-    border-radius: 17px;
+#allPage {
+    width: 90%;
+    margin: auto;
 }
 
-.navi {
+#allPage h1{
+    font-size: 50px;
+    margin: 20px 0;
     text-align: center;
+}
+
+p {
+    font-size: 20px;
+    line-height: 27px;
+}
+
+li {
+    list-style: none;
 }
 
 a {
-    color: #fcff7c;
     text-decoration: none;
-    font-weight: bold;
 }
 
-a:hover {
-    color: #88bdff;
+#headerPage {
+    background: #3ca8b6;
+    position: fixed;
+    display: block;
+    width: 100%;
+    height: 60px;
+    left: 0;
+    top: 0;
+    padding: 7px;
+    box-shadow: 0 10px 80px 5px #030303;
 }
 
-.head-pag nav ul li {
-    background: #088A85;
-    list-style: none;
+#principalH1 {
+    float: left;
     font-size: 30px;
-    padding: 0 3%;
-    display: inline-block;
-    margin-bottom: 10px;
-}
-
-.head-pag h1, .head-pag h2{
-    background: #088A85;
-    padding: 1%;
-    line-height: 10px;
-    margin: 0 auto;
-    text-align: left;
-}
-
-.head-pag a h1 {
+    padding: 0 20px;
     font-weight: bold;
-    text-align: left;
-    font-size: 50px;
-    line-height: 60px;
-    padding: 1% 3%;
-    color: #0b213b;
+    color: #22282c;
+    line-height: 60px;  
 }
 
-#tipia-note {
-    margin: 50px 0 480px 0;
+.navi ul {
+    float: right;
 }
 
-#tipia-note h3 {
+.navi ul li {
+    float: left;
+    padding: 20px 35px 20px 10px;
+    margin: 5px;
+    font-size: 21px;
+}
+
+.navi ul li a {
+    color: #22282c;
+    transition: all 300ms;
+}
+
+.navi ul li a:hover {
+    color: #ffffff;
+}
+
+#principalImg img {
+    --ancho : 74%;
+    --alto : 74%;
+    float: left;
+    width: var(--ancho);
+    height: var(--alto);
+    border-radius: 0 0 100% 0;
+    /* shape-outside: ellipse(var(--ancho) var(--alto) at 1920px 0); */
+}
+
+#information {
+    float: left;
     font-size: 50px;
-    padding: 5px;
+    padding: 30px 20px;
+}
+
+#tipiaSection {
+    display: inline-block;
+}
+
+#contentTipiaSection img {
+    float: left;
+    width: 300px;
+    margin: 0 30px 0 0;
+}
+
+#contentTipiaSection p {
+    display: inline;
+}
+
+.howTo p{
     text-align: center;
-    margin: 20px 0;
-    color: #0b213b;
-}
-#tipia-note p {
-    display: block;
-    font-size: 25px;
-    padding: 7px;
-    margin: 0 50px;
-}
-
-#prince-section {
-    background: #7eb8ff;
-    padding: 50px 0 280px 0;
-}
-
-#prince-section div h3 {
-    padding: 1%;
-}
-
-.how-to p {
-    display: block;
-    font-size: 25px;
-    padding: 7px;
-    margin: 0 50px;
-}
-
-.how-to h3 {
-    font-size: 50px;
-    padding: 5px;
-    text-align: center;
-    color: #0b213b;
 }
 
 #addbutton {
-    display: block;
-    border-radius: 150px;
-    width: 390px;
-    font-size: 25px;
-    padding: 25px;
-    margin: 29px 480px;
-    text-align: center;
-    text-transform: uppercase;
-    color: #ffffff;
-    background: linear-gradient(50deg, #2776d6, #e5e763);
-    letter-spacing: 2px;
-    transition: all 300ms;
-}
-
-#addbutton:hover {
-    transform: translateY(10px);
-    box-shadow: 0px 30px 5px -15px #4e4e4e;
-}
-
-.app-tipia {
-    display: inline-block;
-    margin: 0 120px;
-}
-
-input[type="checkbox"]{
-    width: 40px;
-    height: 40px;
-    padding: 5px 0 5px 5px;
-    margin: 5px 5px 5px 5px;
-    display: inline-block;
-}
-
-input[type="text"] {
-    width: 1000px;
-    font-size: 50px;
-    padding: 5px;
-    margin: 20px auto;
-    border-radius: 5px;
-    display: inline-block;
-}
-
-input[type="button"]{
-    font-size: 25px;
-    padding: 2px 10px;
-    margin: 5px 5px 5px 5px;
-    display: inline-block;
+    flex-direction: row;
+    justify-content: center;
+    width: 400px;
+    height: 50px;
+    margin: 4% 33%;
     border-radius: 50px;
-    background: linear-gradient(100deg, #db4d4d, #266bbe);
-    color: #ffffff;
-    transition: all 300ms;
-}
-
-input[type="button"]:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 10px 10px -2px #4e4e4e;
-}
-
-#about {
-    
-    padding: 50px 0 280px 0;
-}
-
-#about h3 {
-    font-size: 50px;
-    padding: 5px;
-    text-align: center;
-    margin: 20px 0;
-    color: #0b213b;
-}
-
-#about p {
-    display: block;
+    border: none;
+    text-transform: uppercase;
     font-size: 25px;
-    padding: 7px;
-    margin: 0 50px;
+    color: white;
+    font-weight: bold;
+    letter-spacing: 2px;
+    background: linear-gradient(50deg, #095854, #3ca8b6);
 }
 
-#contact {
-    background: #7eb8ff;
-    padding: 50px 0 280px 0;
+#homeworks input[type="chechbox"], #homeworks input[type="text"], #homeworks input[type="button"]{
+    margin: auto;
 }
 
-#contact h3{
-    font-size: 50px;
-    padding: 5px;
+#contactSection p {
+    margin-bottom: 50px;
+}
+
+#footerSection {
+    width: 100%;
+    background: #095854;
+}
+
+#footerSection a {
+    text-decoration: none;
+    color: white;
+}
+
+#principalFooter ul {
     text-align: center;
-    margin: 20px 0;
-    color: #0b213b;
+    padding: 15px;
 }
 
-#contact p {
-    display: block;
-    font-size: 25px;
-    padding: 7px;
-    margin: 0 50px;
-}
-
-#princ-footer {
-    background: #036b51
-}
-
-#princ-footer ul {
-    text-align: center;
-}
-
-#princ-footer ul li {
-    list-style: none;
+#principalFooter ul li {
+    display: inline;
     font-size: 30px;
-    padding: 0 4%;
-    display: inline-block;
-    margin-top: 25px;
-    margin-bottom: 25px;
+    margin: 0 50px;
 }
 
-#princ-footer ul li a{
-    color: #0b213b;
-}
-
-#princ-footer ul li a:hover {
-    color: #9ec8fc;
-}
-
-#sub-footer {
-    border-top: 3px solid #000000;
+#secondaryFooter p{
     text-align: center;
-    margin: 0;
 }
-
-#sub-footer p {
-    text-align: center;
-    padding: 10px 0;
-
-}
-
-#sub-footer p a {
-    color: #0b213b;
-    font-size: 200%;
-}
-
-
-
-
-
